# Fins-SSA-GenAi-Offerings

./: .gitignore  README.md  pyproject.toml  requirements.txt
Data_Ingestion/: 00-setup.py  DLT-Transcript-Policy-Ingestion-Python.py  DLT-Transcript-Policy-Ingestion-SQL.sql  README.md  config.py
archieved/Data_Ingestion/: Image-Text-Ingestion.py  PDF-Text-Table-Ingestion.py  README.md  helper-functions.py
archieved/call_center_genAI_apps/: README.md
call_center_genAI_apps/: README.md
call_center_genAI_apps/audio_transcription_summarization_rag_chatbot/: 02-DLT-Transcript-Policy.py  03-Prompt-Engineering.py  04-Knowledge-Chatbot-RAG.py  05-Offline-Evaluation.py  README.md  chain.py  rag_chain_config.yaml
call_center_genAI_apps/audio_transcription_summariztaion_rag_chatbot/: 00-setup.py  01-speech2text-transcription.py  02-DLT-Transcript-Policy.py  (+5 more)
insurance_call_center_AI_system/: 00-setup.py  01-Audio-Transcription-with-AI-Query.ipynb  01-DLT-Process-Call-Transcripts-with-AI-Functions.sql  02-Create-a-Dashboard.sql  02-Create-vs-Index-Policy-Doc.ipynb  03-Create-UC-Tools.ipynb  03-Prepare-Data-for-a-Dashboard.py  04-Create-UC-Tools.ipynb  04-Create-vs-Index-Policy-Doc.ipynb  05-1-Create-langgraph-tool-calling-agent-customer-service.ipynb  05-2-Create-langgraph-tool-calling-agent-policy-doc.ipynb  06-monitoring-deployed-agents.ipynb  DLT_config.json  README.md  ai_query_test.ipynb  call_center_transcripts_dashboard.lvdash.json  customer_service_agent.py  policy_doc_rag_agent.py
scripts/: dashboard_utils.py  merge_audios.py  run_merge.sh  sample_config.yaml
(+51 files in other folders)
